# flower_project

./: README.md  db.sqlite3  manage.py  pyproject.toml
flower_project/: asgi.py  settings.py  urls.py  wsgi.py
orders/: forms.py  models.py  tests.py  urls.py  utils.py  views.py
orders/management/commands/: add_bundle_price.py
orders/migrations/: 0001_initial.py
templates/: order_form.html  order_history.html  order_summary.html
